syntax = "proto3";

option csharp_namespace = "LkdinServerGrpc";

package admin;
// The admin service definition.
service Admin {

  // Functions availables
  rpc PostUser(UserDTO) returns (MessageReply);
  rpc DeleteUser(Name) returns (MessageReply);
  rpc GetUser(Name) returns (MessageReply);
  rpc GetUsers(UserRequest) returns (UserResponseList);
 
}

  message UserDTO{
	string name = 1;
	int32 age = 2;
	repeated string professions = 3;
	string country = 4;
}

message Name {
	string name = 1;
}


message MessageReply {
	string message = 1;
}

